Add movie collections backfill
